@@ -984,6 +984,20 @@ cdef object _dump(_Element element, int indent):
 
 
 ################################################################################
+# Pickle support
+
+cdef void _setupPickle(reduceFunction):
+    import copy_reg
+    copy_reg.constructor(fromstring)
+    copy_reg.pickle(ObjectifiedElement, reduceFunction, fromstring)
+
+def pickleReduce(obj):
+    return (fromstring, (etree.tostring(obj),))
+
+_setupPickle(pickleReduce)
+del pickleReduce
+
+################################################################################
 # Element class lookup
 
 cdef class ObjectifyElementClassLookup(ElementClassLookup):
